# face-crop-studio

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  tag-release.bat
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: gui_settings.json
docs/: PERFORMANCE.md  cli_recipes.md  gpu_research.md  gui_crop_guide.md  release_runbook.md
docs/diagrams/: architecture.drawio  detection-sequence.drawio
fcs-cli/: Cargo.toml
fcs-cli/src/: annotate.rs  benchmark.rs  color.rs  config.rs  enhancement.rs  gpu.rs  input.rs  main.rs  output_path.rs  webcam.rs  workflow.rs
fcs-cli/tests/: cli_integration.rs
fcs-core/: Cargo.toml
fcs-core/benches/: crop_enhance.rs
fcs-core/examples/: parity_report.rs
fcs-core/src/: cropper.rs  detector.rs  face_cropper.rs  lib.rs  model.rs  nms.rs  postprocess.rs  preprocess.rs
fcs-core/src/gpu/: activation.rs  add.rs  batch_norm.rs  conv2d.rs  graph.rs  max_pool.rs  ops.rs  runtime.rs  tensor.rs  tests.rs  upsample2x.rs
fcs-core/tests/: full_crop_workflow.rs  golden_crop_regions.rs  parity.rs
fcs-gui/: Cargo.toml  build.rs
fcs-gui/src/: app.rs  lib.rs  types.rs
fcs-gui/src/core/: detection.rs  export.rs  mod.rs  quality.rs
fcs-gui/src/interaction/: mod.rs
fcs-gui/src/ui/: canvas.rs  inspector.rs  menubar.rs  shape.rs  sidebar.rs  statusbar.rs  toolbar.rs  widgets.rs
fcs-gui/src/ui/sidebar/: history.rs  mapping.rs  queue.rs
fcs-gui2/: face-crop-studio-windows.html
fcs-gui2/src/: app.rs  main.rs  theme.rs  types.rs
fcs-gui2/src/core/: export.rs
fcs-gui2/src/ui/: canvas.rs  inspector.rs  menubar.rs  shape.rs  sidebar.rs  statusbar.rs  titlebar.rs  toolbar.rs  widgets.rs
fcs-utils/: Cargo.toml
fcs-utils/src/: config.rs  enhance.rs  image_utils.rs  lib.rs  mapping.rs  output.rs  quality.rs  shape.rs  wgsl_validation_tests.rs
fcs-utils/src/enhance/: benches.rs  detail.rs  gpu.rs  pipeline.rs  red_eye.rs  settings.rs  skin.rs  tests.rs  tone.rs
fcs-utils/src/gpu/: background_blur.rs  bilateral_filter.rs  buffer_pool.rs  crop_batch.rs  gaussian_blur.rs  hist_equalize.rs  memory.rs  mod.rs  pixel_adjust.rs  red_eye.rs  red_eye.wgsl  shape_mask.rs
fcs-utils/src/mapping/: common.rs  csv.rs  excel.rs  parquet.rs  sqlite.rs  tests.rs  types.rs
fcs-utils/src/output/: encoders.rs  metadata.rs  tests.rs  types.rs  writer.rs
fcs-utils/src/shape/: mask.rs  outline.rs  tests.rs  types.rs
tools/: find_god_files.py
