[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["fcs-core", "fcs-utils", "fcs-cli", "fcs-gui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "1.2.7-beta"
description = "Face Crop Studio — pure Rust face detection and cropping."

[workspace.dependencies]
# Workspace crates
fcs-core = { path = "fcs-core" }
fcs-utils = { path = "fcs-utils" }

# Error handling and logging
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.32"
thiserror = "2.0.18"

# CLI and desktop UI
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
eframe = { version = "0.34.3", features = ["wgpu"] }
egui = "0.34.3"
egui_extras = "0.34.3"
rfd = "0.17.2"

# Image processing and graphics
fast_image_resize = "6.0.0"
ico = "0.5.0"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "tiff",
    "bmp",
    "avif",
    "avif-native",
    "rayon",
] }
imageproc = "0.27.0"
imgref = "1.12.2"
ravif = { version = "0.13.0", default-features = false, features = [
    "threading",
] }
rgb = "0.8.53"
tiny-skia = "0.12.0"

# Machine learning and numeric processing
bytemuck = { version = "1.25.0", features = ["derive"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
prost = "0.14.4"
tract-onnx = "0.23.1"
wide = "1.5.0"

# GPU and shader support
metal = "0.33.0"
naga = { version = "29.0.3", features = ["wgsl-in"] }
pollster = "0.4.0"
wgpu = "29.0.3"

# Camera and platform integration
nokhwa = { version = "0.10.11", features = ["input-native"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Time",
] }
winresource = "0.1.31"

# Data formats and storage
base64 = "0.22.1"
calamine = "0.35.0"
crc32fast = "1.5.0"
csv = "1.4.0"
parquet = { version = "59.0.0", default-features = false, features = [
    "arrow",
    "flate2",
    "flate2-zlib-rs",
    "lz4",
    "snap",
    "zstd",
] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

# Concurrency and utilities
async-channel = "2.5.0"
lru = "0.18.0"
rayon = "1.12.0"
walkdir = "2.5.0"

# Testing and benchmarking
assert_cmd = "2.2.2"
criterion = "0.8.2"
predicates = "3.1.4"
tempfile = "3.27.0"
